# monadic-party2019

./: CHANGELOG.md  LICENSE  README.md  cabal.project  default.nix  monadic-party2019.cabal  pkgs.nix
.plan.nix/: monadic-party2019.nix
demo-stream/: Main.hs
src/Network/Protocol/Shop/: Type.hs
src/Network/Protocol/Stream/: Client.hs  Codec.hs  Direct.hs  Example.hs  Server.hs  Type.hs
