cabal-version:       2.4
name:                monadic-party2019
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://coot.me
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Marcin Szamotulski
maintainer:          profunctor@pm.me
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Network.Protocol.Stream.Type
                       Network.Protocol.Stream.Client
                       Network.Protocol.Stream.Server
                       Network.Protocol.Stream.Example
                       Network.Protocol.Stream.Direct
                       Network.Protocol.Shop.Type
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.12.0.0
                     , conduit ^>=1.3.1.1 && <1.4.0.0
                     , pipes ^>=4.3.10 && <4.4.0.0
                     , typed-protocols ^>=0.1.0.0 && <0.2.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010

executable monadic-party2019
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.12.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
