cabal-version:       2.4
name:                monadic-party2019
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://coot.me
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Marcin Szamotulski
maintainer:          profunctor@pm.me
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Network.Protocol.Stream.Type
                       Network.Protocol.Stream.Codec
                       Network.Protocol.Stream.Client
                       Network.Protocol.Stream.Server
                       Network.Protocol.Stream.Example
                       -- Network.Protocol.Stream.Direct
  -- other-modules:
  -- other-extensions:
  build-depends:       base              ^>=4.12.0.0
                     , bytestring        ^>=0.10
                     , conduit           ^>=1.3.1.1
                     , cborg             ^>=0.2.1
                     , pipes             ^>=4.3.10
                     , serialise         ^>=0.2.1.0
                     , typed-protocols   ^>=0.1
                     , ouroboros-network ^>=0.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:       -Wall

executable demo-stream
  main-is:             Main.hs
  build-depends:       base              ^>=4.12.0.0
                     , bytestring
                     , contra-tracer     ^>=0.1
                     , directory         ^>=1.3

                     , monadic-party2019
                     , network           ^>=3.0
                     , ouroboros-network ^>=0.1
                     , pipes-bytestring  ^>=2.1
                     , typed-protocols   ^>=0.1
  hs-source-dirs:      demo-stream
  default-language:    Haskell2010
